<resources>
    <string name="app_name">ND Android Portfolio App!</string>
    <string name="action_settings">Settings</string>
    <string name="portfolio_screen_header">My Nanodegree Apps</string>

    <string name="button_spotify_streamer">Spotify Streamer</string>
    <string name="button_scores_app">Scores App</string>
    <string name="button_library_app">Library App</string>
    <string name="button_build_it_bigger">Build It Bigger</string>
    <string name="button_xyz_reader">Xyz Reader</string>
    <string name="button_capstone_my_own_app">Capstone: My Own App</string>

    <string name="format_msg_err_open_app">%s is not being link yet.</string>
</resources>
