<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".fragments.PortfolioFragment">

    <TextView
        style="@style/ScreenHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/portfolio_screen_header" />

    <Button
        android:id="@+id/btn_spotify_streamer"
        style="@style/PortfolioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:text="@string/button_spotify_streamer" />

    <Button
        android:id="@+id/btn_scores_app"
        style="@style/PortfolioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:text="@string/button_scores_app" />

    <Button
        android:id="@+id/btn_library_app"
        style="@style/PortfolioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:text="@string/button_library_app" />

    <Button
        android:id="@+id/btn_build_it_bigger"
        style="@style/PortfolioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:text="@string/button_build_it_bigger" />

    <Button
        android:id="@+id/btn_xyz_reader"
        style="@style/PortfolioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:text="@string/button_xyz_reader" />

    <Button
        android:id="@+id/btn_capstone_my_own_app"
        style="@style/PortfolioCapstoneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/button_capstone_my_own_app" />

</LinearLayout>
